Providing Baseline Files  Please enter the commit message for your changes. Lines starting

--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,6 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+# omit project Node Modules
+CSUSM/node_modules
